--- a/style.css
+++ b/style.css
@@ -101,6 +101,16 @@ h1 {
     box-shadow: 0 2px 4px 0 rgba(0, 0, 0, 0.08);
 }
 
+.collapsible {
+    border: none;
+    outline: none;
+    background-color: rgb(244, 247, 249);
+}
+
+.collapse-content {
+    display: none;
+}
+
 .footer {
     padding: 50px;
     /* background-color: rgba(196, 196, 196, 0.71); */
