--- a/style.css
+++ b/style.css
@@ -111,7 +111,12 @@ h1 {
     display: none;
 }
 
-.footer {
-    padding: 50px;
-    /* background-color: rgba(196, 196, 196, 0.71); */
+footer {
+    margin-top: 50px;
+}
+
+footer p {
+    display: block; 
+    margin: 2px auto; 
+    text-align: center;
 }
