--- a/style.css
+++ b/style.css
@@ -8,7 +8,7 @@ li {
 }
 
 body {
-    font-family: Helvetica, Arial, sans-serif;
+    font-family: "Source Sans Pro", Helvetica, Arial, sans-serif;
     background-color: rgb(244, 247, 249);
 }
 
