--- a/style.css
+++ b/style.css
@@ -1,43 +1,24 @@
-* {
-    margin: 0;
-    padding: 0;
-}
-
-li {
-    list-style: none;
-}
-
 body {
     font-family: "Source Sans Pro", Helvetica, Arial, sans-serif;
+    font-weight: 500;
+    color: #000;
     background-color: rgb(244, 247, 249);
 }
 
-h1 {
-    font-weight: 300;
+.intro {
+    font-size: 16px;
+    margin-top: 30px;
 }
 
-.container {
-    width: 1000px;
-    height: 300px;
-    margin: 0 auto;
+.quote {
+    font-family: 'Pinyon Script';
 }
 
-.top {
-    width: 800px;
-    margin: 0 auto;
-    height: 300px;
-    margin-top: 50px;
-}
-
-#name {
-    text-align: center;
-}
-
-.links {
-    margin-top: 10px;
-    text-align: center;
-    width: 500px;
-    /* margin: 0 auto; */
+.avatar {
+    width: 100%;
+    /* height: 100%; */
+    /* border-radius: 50%; */
+    object-fit: cover;
 }
 
 .links a {
@@ -47,38 +28,8 @@ h1 {
     text-decoration: none;
 }
 
-.left {
-    float: left;
-    width: 500px;
-    height: 100%;
-    /* background-color: purple; */
-}
-
-.right {
-    float: left;
-    width: 250px;
-    height: 250px;
-    margin: 25px;
-    /* background-color: skyblue; */
-}
-
-.avatar {
-    width: 100%;
-    height: 100%;
-    border-radius: 50%;
-    object-fit:cover;
-}
-
-.intro {
-    margin-top: 10px;
-}
-
-.quote {
-    font-family: 'Pinyon Script';
-}
-
-.section {
-    margin-top: 10px;
+.pub-link a {
+    text-decoration: none;
 }
 
 .section-name {
@@ -86,37 +37,23 @@ h1 {
     font-size: 20px;
 }
 
-.exp-list, .misc {
-    margin: 10px;
+.exp-list, .pub-list {
+    font-size: 16px;
 }
 
-.pub-list {
-    width: 80%;
-    padding: 10px;
-}
-.nav {
-    padding: 20px;
-    height: 42px;
-    background-color: #fff;
-    box-shadow: 0 2px 4px 0 rgba(0, 0, 0, 0.08);
+.center-row {
+    margin: auto;
 }
 
-.collapsible {
-    border: none;
-    outline: none;
-    background-color: rgb(244, 247, 249);
-}
-
-.collapse-content {
-    display: none;
+li {
+    list-style: none;
 }
 
 footer {
     margin-top: 50px;
+    font-size: 10pt;
 }
 
 footer p {
-    display: block; 
-    margin: 2px auto; 
-    text-align: center;
+    margin-bottom: 0;
 }
