--- a/style.css
+++ b/style.css
@@ -2,7 +2,7 @@ body {
   font-family: "Source Sans Pro", Helvetica, Arial, sans-serif;
   font-weight: 500;
   color: #000;
-  background-color: rgb(244, 247, 249);
+  background-color: rgb(233, 234, 233);
 }
 
 /* box shadow from https://www.w3schools.com/css/css3_shadows_box.asp */
@@ -14,6 +14,12 @@ body {
   width: 100%;
   height: 50px;
   box-shadow: 2px 2px 5px rgba(0, 0, 0, 0.2);
+}
+
+.container {
+  margin: 60px auto 20px;
+  background: #fff;
+  box-shadow: 2px 2px 7px rgba(100, 100, 100, 0.5);
 }
 
 /* from http://web.stanford.edu/~jksun/css/main.css */
@@ -81,7 +87,7 @@ div.ftheader a:visited {
 .intro {
   font-size: 16px;
   margin-top: 30px;
-  padding: 60px;
+  padding: 20px 0px 20px 50px;
 }
 
 .quote {
@@ -108,6 +114,8 @@ div.ftheader a:visited {
 }
 
 .section-name {
+  border-top: 1.5px solid rgb(160, 160, 160);
+  padding-top: 10px;
   font-weight: 600;
   font-size: 20px;
 }
