--- a/style.css
+++ b/style.css
@@ -17,6 +17,7 @@ body {
 }
 
 .container {
+  max-width: 1000px;
   margin: 60px auto 20px;
   background: #fff;
   box-shadow: 2px 2px 7px rgba(100, 100, 100, 0.5);
@@ -87,7 +88,9 @@ div.ftheader a:visited {
 .intro {
   font-size: 16px;
   margin-top: 30px;
-  padding: 20px 0px 20px 50px;
+  padding-top: 20px;
+  padding-bottom: 10px;
+  /* padding: 20px 0px 20px 50px; */
 }
 
 .quote {
@@ -115,7 +118,7 @@ div.ftheader a:visited {
 
 .section-name {
   border-top: 1.5px solid rgb(160, 160, 160);
-  padding-top: 10px;
+  padding-top: 5px;
   font-weight: 600;
   font-size: 20px;
 }
