--- a/style.css
+++ b/style.css
@@ -18,7 +18,7 @@ body {
 
 .container {
   max-width: 1000px;
-  margin: 60px auto 20px;
+  margin: 50px auto 0px;
   background: #fff;
   box-shadow: 2px 2px 7px rgba(100, 100, 100, 0.5);
 }
@@ -112,8 +112,18 @@ div.ftheader a:visited {
   margin-right: 20pt;
 }
 
-.pub-link a {
+.pub-item a {
   text-decoration: none;
+}
+
+.pub-item {
+  align-items: center;
+  margin-top: 20px;
+  margin-bottom: 20px;
+}
+
+.paper-info p {
+  margin-bottom: 0px;
 }
 
 .section-name {
