--- a/style.css
+++ b/style.css
@@ -128,10 +128,12 @@ div.ftheader a:visited {
 }
 
 .section-name {
+  /* Solid line on top*/
   border-top: 1.5px solid rgb(160, 160, 160);
   padding-top: 5px;
   font-weight: 600;
   font-size: 20px;
+  margin-bottom: 5px;
 }
 
 .exp-list,
@@ -148,7 +150,7 @@ li {
 }
 
 footer {
-  margin-top: 50px;
+  margin-top: 10px;
   font-size: 10pt;
 }
 
