--- a/style.css
+++ b/style.css
@@ -18,7 +18,7 @@ body {
 }
 
 .container {
-  max-width: 1000px;
+  max-width: 48%;
   margin: 50px auto 0px;
   /* background: #fff; */
   /* box-shadow: 2px 2px 7px rgba(100, 100, 100, 0.5); */
@@ -113,7 +113,8 @@ div.ftheader a:visited {
   margin-right: 20pt;
 }
 
-.pub-item a {
+.pub-item a,
+.exp-list a {
   text-decoration: none;
 }
 
