--- a/style.css
+++ b/style.css
@@ -18,7 +18,7 @@ body {
 }
 
 .container {
-  max-width: 48%;
+  max-width: min(48%, 1000px);
   margin: 50px auto 0px;
   /* background: #fff; */
   /* box-shadow: 2px 2px 7px rgba(100, 100, 100, 0.5); */
